<resources>
    <string name="app_name">Movie Arc</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="watchlist">Watchlist</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="for_you">For You</string>
    <string name="top_rated">Top Rated</string>
    <string name="nosearch">Start typing to search for movies\n Search by title, genre, director, or cast</string>
    <string name="popular_searches">Popular Searches</string>
    <string name="settings">Settings</string>
    <string name="john_doe_email_com">john.doe@email.com</string>
    <string name="john_doe">John Doe</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="darkC">Use dark mode for better viewing in low light conditions</string>
    <string name="notifications">Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="push_notify">Get notified about new releases and recommendations</string>
    <string name="watchlist_">Watchlist</string>
    <string name="_0">0</string>
    <string name="reveiws">Reveiws</string>
    <string name="wishlist">Wishlist</string>
    <string name="watched">Watched</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">Your Watchlist is empty. Add Movies you want to \n watch!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remeber_me">Remeber me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="your_cinematic_journey_starts_here">Your cinematic journey starts here</string>
    <string name="Continue">Continue</string>
    <string name="Continue_">Continue</string>
    <string name="your_personal_movie_companion">Your Personal Movie Companion</string>
    <string name="welcome_to_movie_arc">Welcome To Movie Arc</string>
    <string name="discover_amazing_movies_tailored_just_for_you">Discover amazing movies tailored just for you</string>
    <string name="personalized_recommendations">Personalized Recommendations</string>
    <string name="community_reviews">Community Reviews</string>
    <string name="smart_watchlists">Smart Watchlists</string>
    <string name="choose_your_favourite_genre">Choose Your Favourite Genre</string>
    <string name="help_us_understand_your_taste">Help us understand your taste</string>
    <string name="select_genres_you_enjoy_to_get_better_recommendations">Select genres you enjoy to get better recommendations</string>
    <string name="follow_you">Follow Your Favorite Actors</string>
    <string name="get_notified">Get notified about their latest movies</string>
    <string name="select_actors">Select actors that you\'d like to follow for personalized\n updates</string>
    <string name="action">Action</string>
    <string name="avatar_image">Avatar Image</string>
    <string name="ryan_gosling">Ryan Gosling</string>
    <string name="follow">Following</string>
    <string name="the_fantastic_4_first_steps">The Fantastic 4: First Steps</string>
    <string name="thriller">Thriller</string>
    <string name="sci_fi">sci-fi</string>
    <string name="midnight_heist">Midnight Heist\nMidnight Heist</string>
    <string name="watch">Watch</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="add_to_whishlist">Add to Whishlist</string>
    <string name="Overview">Against the vibrant backdrop of a 1960s-inspired, retro-futuristic world, Marvel\'s
        First Family is forced to balance their roles as heroes with the strength of their family bond,
        while defending Earth from a ravenous space god called Galactus and his enigmatic Herald, Silver Surfer.\n
        Against the vibrant backdrop of a 1960s-inspired, retro-futuristic world, Marvel\'s
        First Family is forced to balance their roles as heroes with the strength of their family bond,
        while defending Earth from a ravenous space god called Galactus and his enigmatic Herald, Silver Surfer.\n
        Against the vibrant backdrop of a 1960s-inspired, retro-futuristic world, Marvel\'s
        First Family is forced to balance their roles as heroes with the strength of their family bond,
        while defending Earth from a ravenous space god called Galactus and his enigmatic Herald, Silver Surfer.
    </string>
    <string name="similar_movies">Similar Movies</string>
    <string name="sample_text">Fantastic 4 Fantastic 4Fantastic 4Fantastic 4Fantastic 4</string>
</resources>