<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".IntroUI.IntroFragments.WelcomeFragment">

    <ImageView
        android:layout_marginTop="5dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:elevation="5dp"
        android:src="@android:drawable/presence_video_away"
        android:background="@drawable/circular_bg"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleHeading"
        android:text="@string/welcome_to_movie_arc" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextHeading"
        android:textStyle="normal"
        android:textSize="15sp"
        android:text="@string/your_personal_movie_companion"
        android:layout_marginBottom="20dp"/>


    <!--    Movie logo-->

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:src="@drawable/movie_logo"
        android:elevation="10dp"
        android:background="@drawable/circular_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/discover_amazing_movies_tailored_just_for_you" />

    <!--    perks-->
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/star_com"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalized_recommendations"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/community_com"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community_reviews"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/smart_com"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_watchlists"/>

    </LinearLayout>
</LinearLayout>