<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".IntroUI.IntroFragments.GenreFragment">

    <ImageView
        android:layout_marginTop="5dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/smart_com"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleHeading"
        android:text="@string/choose_your_favourite_genre"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textSize="15sp"
        android:text="@string/help_us_understand_your_taste"/>

<!--    our recycler view holder-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_genres_you_enjoy_to_get_better_recommendations"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/genreRecycler"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/genreCount"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selected 0 genres"/>



</LinearLayout>