<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".IntroUI.IntroFragments.ActorFragment">

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:src="@drawable/community_com"
        android:background="@drawable/circular_bg"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleHeading"
        android:text="@string/follow_you"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textSize="15sp"
        android:text="@string/get_notified"/>

    <!--    our recycler view holder-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/select_actors"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/actorRecycler"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/actorCount"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selected 0 Actors"/>

</LinearLayout>